bpo-41061: Fix incorrect expressions in hashtable (GH-21028)

Signed-off-by: Christian Heimes <christian@python.org>